migrate to pnpm
