# server/commandManager/commandFunctions/createCashQuery.ts
@@ -8,6 +8,7 @@ interface CommandInteraction {
   readonly options: {
     getString(name: string): string | null;
     getBoolean(name: string): boolean | null;
+    getNumber(name: string): number | null;
   };
   editReply(message: string): Promise<unknown>;
 }
@@ -15,13 +16,15 @@ interface CommandInteraction {
 export default async function (interaction: CommandInteraction) {
   const query = interaction.options.getString("query") || "placeholder";
   const dmOnly = interaction.options.getBoolean("dmonly") ?? false;
+  const maxPrice = interaction.options.getNumber("maxprice");
+  const scanMode = interaction.options.getString("scanmode") ?? "searchUrl";
   const search = new URL(query);
   if (search.toString().includes("https://www.cashconverters.com.au/")) {
     await db.query.create({
       data: {
         dmOnly,
         cashConverters: {
-          create: { url: search.toString() },
+          create: { url: search.toString(), maxPrice, scanMode },
         },
       },
     });
